added hiding code and created a new npc

--- a/Dinner.inform/Index/Phrasebook.html
+++ b/Dinner.inform/Index/Phrasebook.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<355;i++) {
+            for (var i=0;i<360;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -5726,6 +5726,8 @@
     <p class="hang">animal ... <i>noun, a kind of </i>person</p>
     <p class="hang">appreciate</p>
     <p class="hang">aren't holding that error ... <i>noun, value of </i>command parser error</p>
+    <p class="hang">armful ... <i>adjective: (of </i>object<i>) either/or property of </i>person<i>, opposite of </i>armless<i>&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.tif></a></i></p>
+    <p class="hang">armless ... <i>adjective: (of </i>object<i>) either/or property of </i>person<i>, opposite of </i>armful<i>&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.tif></a></i></p>
     <p class="hang">arrive</p>
     <p class="hang">at least <i>used to count things: 'at least five doors'</i></p>
     <p class="hang">at least, to be&nbsp;<a href=#A10003><img border=0 src=inform:/doc_images/Below.tif></a></p>
@@ -5825,9 +5827,10 @@
     <p class="hang">held by, to be&nbsp;<a href=#A10028><img border=0 src=inform:/doc_images/Below.tif></a></p>
     <p class="hang">held in, to be&nbsp;<a href=#A10029><img border=0 src=inform:/doc_images/Below.tif></a></p>
     <p class="hang">held inside, to be&nbsp;<a href=#A10030><img border=0 src=inform:/doc_images/Below.tif></a></p>
+    <p class="hang">hidden ... <i>adjective: (of </i>object<i>) either/or property of </i>person<i>, opposite of </i>nothidden<i>&nbsp;<a href="source:story.ni#line111"><img border=0 src=inform:/doc_images/Reveal.tif></a></i></p>
     <p class="hang">hold&nbsp;<a href=#A10031><img border=0 src=inform:/doc_images/Below.tif></a></p>
     <p class="hang">holding, to be&nbsp;<a href=#A10032><img border=0 src=inform:/doc_images/Below.tif></a></p>
-    <p class="hang">hungry ... <i>adjective: (of </i>object<i>) either/or property of </i>person<i>, opposite of </i>not hungry<i>&nbsp;<a href="source:story.ni#line71"><img border=0 src=inform:/doc_images/Reveal.tif></a></i></p>
+    <p class="hang">hungry ... <i>adjective: (of </i>object<i>) either/or property of </i>person<i>, opposite of </i>not hungry<i>&nbsp;<a href="source:story.ni#line76"><img border=0 src=inform:/doc_images/Reveal.tif></a></i></p>
     <p></p><p class="hang">I beg your pardon error ... <i>noun, value of </i>command parser error</p>
     <p class="hang">improper-named ... <i>adjective: (of </i>object<i>) either/or property of </i>object<i>, opposite of </i>proper-named<i></i></p>
     <p class="hang">in, to be&nbsp;<a href=#A10033><img border=0 src=inform:/doc_images/Below.tif></a></p>
@@ -5898,9 +5901,10 @@
     <p class="hang">nonexistent ... <i>adjective: (of </i>real number<i>) it results from an impossible calculation, like the square root of minus one</i></p>
     <p class="hang">not a verb I recognise error ... <i>noun, value of </i>command parser error</p>
     <p class="hang">not enough of those available error ... <i>noun, value of </i>command parser error</p>
-    <p class="hang">not hungry ... <i>adjective: (of </i>object<i>) either/or property of </i>person<i>, opposite of </i>hungry<i>&nbsp;<a href="source:story.ni#line71"><img border=0 src=inform:/doc_images/Reveal.tif></a></i></p>
+    <p class="hang">not hungry ... <i>adjective: (of </i>object<i>) either/or property of </i>person<i>, opposite of </i>hungry<i>&nbsp;<a href="source:story.ni#line76"><img border=0 src=inform:/doc_images/Reveal.tif></a></i></p>
     <p class="hang">not something you need to refer to error ... <i>noun, value of </i>command parser error</p>
     <p class="hang">not sure what it refers to error ... <i>noun, value of </i>command parser error</p>
+    <p class="hang">nothidden ... <i>adjective: (of </i>object<i>) either/or property of </i>person<i>, opposite of </i>hidden<i>&nbsp;<a href="source:story.ni#line111"><img border=0 src=inform:/doc_images/Reveal.tif></a></i></p>
     <p class="hang">nothing to do error ... <i>noun, value of </i>command parser error</p>
     <p class="hang">noun did not make sense in that context error ... <i>noun, value of </i>command parser error</p>
     <p></p><p class="hang">odd ... <i>adjective: (of </i>number<i>)  opposite of </i>even<i></i></p>
@@ -6106,7 +6110,7 @@
     <p class="tightin2"><i>past:</i>&nbsp;A supported B; A supported B</p>
     <p class="tightin2"><i>present perfect:</i>&nbsp;A has  supported B</p>
     <p class="tightin2"><i>past perfect:</i>&nbsp;A have  supported B; A had  supported B; A had  supported B</p>
-    <p class="hang"><a name=A10115></a>To be <b>supported by</b> ... <i>reversed support </i></p><p class="hang"><a name=A10116></a>To be <b>supported on</b> ... <i>reversed support </i></p><p class="hang"><a name=A10117></a>To be <b>supporting</b> ... <i>support </i></p><p class="hang"><a name=A10118></a>To <b>switch</b> ... for saying only</p><p class="hang"><a name=A10119></a>To <b>take</b> ... for saying only</p><p class="hang"><a name=A10120></a>To <b>talk</b> ... for saying only</p><p class="hang"><a name=A10121></a>To <b>taste</b> ... for saying only</p><p class="hang"><a name=A10122></a>To be <b>the same property as</b>&nbsp;<a href="source:story.ni#line100"><img border=0 src=inform:/doc_images/Reveal.tif></a> ... <i>same-specification-as </i></p><p class="hang"><a name=A10123></a>To be <b>through</b> ... <i>leading-through </i></p><p class="hang"><a name=A10124></a>To <b>touch</b> ... for saying only</p><p class="hang"><a name=A10125></a>To <b>turn</b> ... for saying only</p><p class="hang"><a name=A10126></a>To <b>unlock</b> ... <i>lock-fitting </i></p><p class="tightin2"><i>present:</i>&nbsp;A unlocks B; A unlock B</p>
+    <p class="hang"><a name=A10115></a>To be <b>supported by</b> ... <i>reversed support </i></p><p class="hang"><a name=A10116></a>To be <b>supported on</b> ... <i>reversed support </i></p><p class="hang"><a name=A10117></a>To be <b>supporting</b> ... <i>support </i></p><p class="hang"><a name=A10118></a>To <b>switch</b> ... for saying only</p><p class="hang"><a name=A10119></a>To <b>take</b> ... for saying only</p><p class="hang"><a name=A10120></a>To <b>talk</b> ... for saying only</p><p class="hang"><a name=A10121></a>To <b>taste</b> ... for saying only</p><p class="hang"><a name=A10122></a>To be <b>the same property as</b>&nbsp;<a href="source:story.ni#line95"><img border=0 src=inform:/doc_images/Reveal.tif></a> ... <i>same-specification-as </i></p><p class="hang"><a name=A10123></a>To be <b>through</b> ... <i>leading-through </i></p><p class="hang"><a name=A10124></a>To <b>touch</b> ... for saying only</p><p class="hang"><a name=A10125></a>To <b>turn</b> ... for saying only</p><p class="hang"><a name=A10126></a>To <b>unlock</b> ... <i>lock-fitting </i></p><p class="tightin2"><i>present:</i>&nbsp;A unlocks B; A unlock B</p>
     <p class="tightin2"><i>past:</i>&nbsp;A unlocked B; A unlocked B</p>
     <p class="tightin2"><i>present perfect:</i>&nbsp;A has  unlocked B</p>
     <p class="tightin2"><i>past perfect:</i>&nbsp;A have  unlocked B; A had  unlocked B; A had  unlocked B</p>
