--- a/Dinner.inform/Index/Details/77_A.html
+++ b/Dinner.inform/Index/Details/77_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<355;i++) {
+            for (var i=0;i<360;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -638,6 +638,13 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr><b>Nudging</b>&nbsp;<a href="source:story.ni#line23"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Nudging <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line23"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_nudging></a> (<i>past tense</i> nudged)<br>
+    <hr><b>Talking to</b>&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Hiding behind&nbsp;<a href="source:story.ni#line113"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Talking to <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_talking_to></a> (<i>past tense</i> talked to)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;push/move/shift/clear/press [something]&quot;&nbsp;<a href="source:story.ni#line23"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p class="hangingin2">&quot;nudge [something]&quot;&nbsp;<a href="source:story.ni#line23"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">&quot;talk to [someone]&quot;&nbsp;<a href="source:story.ni#line27"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p class="hangingin2">&quot;converse with [someone]&quot;&nbsp;<a href="source:story.ni#line27"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>talking to Noname</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line30"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <br><p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line28"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <br>
+    <!--CONTENT ENDS-->
+    </font>
+</body>
+</html>
