--- a/Dinner.inform/Index/Details/79_A.html
+++ b/Dinner.inform/Index/Details/79_A.html
@@ -638,26 +638,8 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr><b>Standard actions concerning other people</b><br>Giving it to&nbsp;<a href=24_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Showing it to&nbsp;<a href=25_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Waking&nbsp;<a href=26_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Throwing it at&nbsp;<a href=27_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Attacking&nbsp;<a href=28_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Kissing&nbsp;<a href=29_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Answering it that</b>&nbsp;<a href=30_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Telling it about&nbsp;<a href=31_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Asking it about&nbsp;<a href=32_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Asking it for&nbsp;<a href=33_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Answering <font color="#000080">something</font> that <font color="#000080">some text</font> </b><a name=Answer></a> (<i>past tense</i> answered it that)<br>
-    <p>The Standard Rules do
-    not include any systematic way to handle conversation: instead, Inform is
-    set up so that it is as easy as we can make it to write specific rules
-    handling speech in particular games, and so that if no such rules are
-    written then all attempts to communicate are gracefully if not very
-    interestingly rejected.<br><br>The topic here can be any double-quoted text, which can itself contain
-    tokens in square brackets: see the documentation on Understanding.<br><br>Answering is an action existing so that the player can say something free-form
-    to somebody else. A convention of IF is that a command such as DAPHNE, TAKE
-    MASK is a request to Daphne to perform an action: if the persuasion rules in
-    force mean that she consents, the action 'Daphne taking the mask' does
-    indeed then result. But if the player types DAPHNE, 12375 or DAPHNE, GREAT
-    HEAVENS - or anything else not making sense as a command - the action
-    'answering Daphne that ...' will be generated.<br><br>The name of the action arises because it is also caused by typing, say,
-    ANSWER 12375 when Daphne (say) has asked a question.<p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;answer/say/shout/speak [text] to [someone]&quot; <i>reversed</i></p><p><b>Rules controlling this action</b></p><p>
-    <p class="hangingin2">report&nbsp;&nbsp;&nbsp;&nbsp;<i>an actor answering something that</i>&nbsp;&nbsp;<font color="#800000">block answering rule</font>&nbsp;&nbsp;<a href="javascript:pasteCode('block answering rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The block answering rule is not listed in the report answering it that rulebook.[=0x000A=]')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i>&nbsp;&nbsp;<a href="#" onclick="showResp('extra1000222', 'plus1000222'); return false;"><img border=0 id="plus1000222" src=inform:/doc_images/responses.png></a>&nbsp;1</p>
-    <div id="extra1000222" style="display: none;"><p class="in2">&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #ffffff; font-family: 'Courier New', Courier, monospace; background-color: #8080ff;">&nbsp;&nbsp;A&nbsp;&nbsp;</span> <span style="color: #000066;">"[There] [are] no reply."</span>&nbsp;&nbsp;<a href="javascript:pasteCode('block answering rule response (A)')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i>&nbsp;<a href="javascript:pasteCode('block answering rule response (A) is [=0x0022=]New text.[=0x0022=].')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>set</i></div>
+    <hr>Talking to&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Looking behind&nbsp;<a href="source:story.ni#line111"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Hiding behind</b>&nbsp;<a href="source:story.ni#line115"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Hiding behind <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line115"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A79_hiding_behind></a> (<i>past tense</i> hidden behind)<br>
+    <p><hr><p><b>Typed commands leading to this action</b><p>
+    <p class="hangingin2">&quot;hide behind [something]&quot;&nbsp;<a href="source:story.ni#line115"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>hiding behind</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line117"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
     <br>
-    <!--CONTENT ENDS-->
-    </font>
-</body>
-</html>
