--- a/Dinner.inform/Index/Details/79_A.html
+++ b/Dinner.inform/Index/Details/79_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<360;i++) {
+            for (var i=0;i<365;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -638,8 +638,6 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr>Talking to&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Looking behind&nbsp;<a href="source:story.ni#line111"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Hiding behind</b>&nbsp;<a href="source:story.ni#line115"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Hiding behind <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line115"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A79_hiding_behind></a> (<i>past tense</i> hidden behind)<br>
+    <hr>Talking to&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Hiding behind&nbsp;<a href="source:story.ni#line117"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Leaning</b>&nbsp;<a href="source:story.ni#line161"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Leaning <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line161"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A79_leaning></a> (<i>past tense</i> leaned)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;hide behind [something]&quot;&nbsp;<a href="source:story.ni#line115"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
-    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>hiding behind</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line117"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
-    <br>
+    <p class="hangingin2">&quot;lean [something] against [something]&quot;&nbsp;<a href="source:story.ni#line161"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
