--- a/Dinner.inform/Index/Details/77_A.html
+++ b/Dinner.inform/Index/Details/77_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<376;i++) {
+            for (var i=0;i<384;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -638,7 +638,7 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr><b>Talking to</b>&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Hiding behind&nbsp;<a href="source:story.ni#line118"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Getting on&nbsp;<a href="source:story.ni#line170"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Getting out of&nbsp;<a href="source:story.ni#line178"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Leaning&nbsp;<a href="source:story.ni#line246"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Talking to <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_talking_to></a> (<i>past tense</i> talked to)<br>
+    <hr><b>Talking to</b>&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Hiding behind&nbsp;<a href="source:story.ni#line90"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Getting on&nbsp;<a href="source:story.ni#line134"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Getting out of&nbsp;<a href="source:story.ni#line142"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Leaning&nbsp;<a href="source:story.ni#line210"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Glueing&nbsp;<a href="source:story.ni#line245"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Talking to <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_talking_to></a> (<i>past tense</i> talked to)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
     <p class="hangingin2">&quot;talk to [someone]&quot;&nbsp;<a href="source:story.ni#line27"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p class="hangingin2">&quot;converse with [someone]&quot;&nbsp;<a href="source:story.ni#line27"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
     <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>talking to Steve</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line30"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
