--- a/Dinner.inform/Index/Details/82_A.html
+++ b/Dinner.inform/Index/Details/82_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<393;i++) {
+            for (var i=0;i<419;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -638,13 +638,13 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr>Talking to&nbsp;<a href="source:story.ni#line26"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Hiding behind&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Getting on&nbsp;<a href="source:story.ni#line145"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Getting out of&nbsp;<a href="source:story.ni#line153"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Leaning&nbsp;<a href="source:story.ni#line246"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Glueing</b>&nbsp;<a href="source:story.ni#line286"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Glueing <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line286"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A82_glueing></a> (<i>past tense</i> glueed)<br>
+    <hr>Getting on&nbsp;<a href="source:story.ni#line170"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Getting out of</b>&nbsp;<a href="source:story.ni#line178"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Glueing&nbsp;<a href="source:story.ni#line295"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=83_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Getting out of <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line178"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A82_getting_out_of></a> (<i>past tense</i> got out of)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;glue [something] and [something]&quot;&nbsp;<a href="source:story.ni#line286"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p class="hangingin2">&quot;glue [something] and [something] together&quot;&nbsp;<a href="source:story.ni#line286"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Named values belonging to this action</b></p>
-    <p class="tightin2">Contraption&nbsp;<a href="source:story.ni#line295"><img border=0 src=inform:/doc_images/Reveal.tif></a> - <i>object</i></p><p><b>Rules controlling this action</b></p><p>
-    <p class="hangingin2">set action variables for&nbsp;&nbsp;&nbsp;&nbsp;<i>glueing</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line311"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
-    <br><p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>glueing</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line288"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
-    <br><p class="hangingin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line297"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
-    <br><p class="hangingin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line302"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
-    <br><p class="hangingin2">report&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line308"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <p class="hangingin2">&quot;get out of [something]&quot;&nbsp;<a href="source:story.ni#line178"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>getting out of the Sponge</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line183"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <br><p class="hangingin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;<i>getting out of something</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line180"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
     <br>
+    <!--CONTENT ENDS-->
+    </font>
+</body>
+</html>
